fixed placeholder contrast for every browser

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,3 +230,7 @@ a:hover {
 .form-perso:active {
     box-shadow: 7px 7px 0px 0px var(--sec-color);
 }
+
+.perspective::placeholder {
+    color: #DDD;
+}
